--- a/portfolio/wtf.html
+++ b/portfolio/wtf.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
     <title>PORTFOLIO</title>
-    <link href="portfolio/css/style.css" media="all" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="portfolio/img/koinobori.png" />
+    <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
   </head>
 
   <body>
@@ -37,7 +37,7 @@
             <p class="main-visual-subtitle">PORTFOLIO</p>
             <div class="main-visual-profile">
               <a class="main-visual-img">
-        <img src="portfolio/img/oira.png" alt="自画像" width="150" height="150">
+        <img src="img/oira.png" alt="自画像" width="150" height="150">
       </a>
       <p class="main-visual-text">生後232か月の人間。学校とバイトをどうにか両立させて必死に生きる人間。<br />バイト先では、市内の4店舗のローソンで店長ではないのに権力を振りかざしているリーダースタッフ</p>
 
@@ -83,7 +83,7 @@
             <div class="skill-list">
               <div class="skill-item">
                 <p class="skill-img">
-                  <img src="portfolio/img/25125_color.png" alt="" />
+                  <img src="img/25125_color.png" alt="" />
                     </a>
                 </p>
                 <div class="skill-body">
@@ -95,7 +95,7 @@
               </div>
               <div class="skill-item">
                 <p class="skill-img">
-                  <img src="portfolio/img/25125_color.png" alt="" />
+                  <img src="img/25125_color.png" alt="" />
                 </p>
                 <div class="skill-body">
                   <h3 class="skill-name">Python/Java</h3>
@@ -108,7 +108,7 @@
               </div>
               <div class="skill-item">
                 <p class="skill-img">
-                  <img src="portfolio/img/25125_color.png" alt="" />
+                  <img src="img/25125_color.png" alt="" />
                 </p>
                 <div class="skill-body">
                   <h3 class="skill-name">資格</h3>
@@ -122,7 +122,7 @@
               </div>
               <div class="skill-item">
                 <p class="skill-img">
-                  <img src="portfolio/img/25125_color.png" alt="" />
+                  <img src="img/25125_color.png" alt="Wikimedia財団のロゴ" />
                 </p>
                 <div class="skill-body">
                   <h3 class="skill-name">そのほか</h3>
@@ -147,9 +147,9 @@
               <a class="works-item btn-denim" href="2.ensyu\ensyu02.html">ENSYU 02</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu03_1.html">ENSYU 03_1</a>
               <a class="works-item btn-denim" href="2.ensyu/ensyu03_2.html">ENSYU 03_2</a>
-              <a class="works-item btn-denim" href="2.ensyu/ensyu04_1.html">ENSYU 04_1</a>
-              <a class="works-item btn-denim" href="2.ensyu/ensyu04_2.html">ENSYU 04_2</a>
-              <a class="works-item btn-denim" href="2.ensyu/ensyu04_3.html">ENSYU 04_3</a>
+              <a class="works-item btn-denim" href="2.enysu\ensyu04-1.html">ENSYU 04_1</a>
+              <a class="works-item btn-denim" href="2.enysu\ensyu04-2.html">ENSYU 04_2</a>
+              <a class="works-item btn-denim" href="2.enysu\ensyu04-3.html">ENSYU 04_3</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu05.html">ENSYU 05</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu06_1.html">ENSYU 06_1</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu06_2_1.html">ENSYU 06_2</a>
@@ -168,7 +168,7 @@
               <a class="works-item btn-box" href="2.ensyu/ensyu11_2.html">ensyu11_2</a>
 
 
-              <a class="works-item btn-box" href="2.ensyu/ensyu07_ex01.html">CHALLENGE1</a>
+              <a class="works-item btn-box" href="#">CHALLENGE1</a>
               <a class="works-item btn-box" href="#">CHALLENGE2</a>
             </div>
           </div>
@@ -179,12 +179,14 @@
                   <div class="inner">
                     <h2 class="title">PHOTO</h2>
                     <div class="works-list">
-                      <img src="portfolio/img/boyo_nakayama.JPEG" alt="望洋中山の駐車場" width="354" height="265" hspace="5" vspace="5">
-                      <img src="portfolio/img/wingbay-otaru_bayside.JPEG" alt="ウイングベイ小樽横のベイサイド" width="354" height="265" hspace="5" vspace="5">
-                      <img src="portfolio/img/hombetu_ic.JPEG" alt="本別IC出口" width="354" height="265" hspace="5" vspace="5"> <br>
-                      <img src="portfolio/img/aeon_asahikawa_station.JPEG" alt="イオンモール旭川駅前"  width="354" height="265" hspace="5" vspace="5">
-                      <img src="portfolio/img/snow_storm.JPEG" alt="ちょいふぶき"  width="354" height="265" hspace="5" vspace="5">
-                      <img src="portfolio/img/super_snow_storm.JPEG" alt="猛吹雪" width="354" height="265" hspace="5" vspace="5">
+                      <img src="img/boyo_nakayama.JPEG" alt="望洋中山の駐車場" width="354" height="265" hspace="5" vspace="5">
+                      <img src="img/wingbay-otaru_bayside.JPEG" alt="ウイングベイ小樽横のベイサイド" width="354" height="265" hspace="5" vspace="5">
+                      <img src="img/hombetu_ic.JPEG" alt="本別IC出口" width="354" height="265" hspace="5" vspace="5">
+                      <br>
+                      <img src="img/aeon_asahikawa_station.JPEG" alt="イオンモール旭川駅前"  width="354" height="265" hspace="5" vspace="5">
+                      <img src="img/snow_storm.JPEG" alt="ちょいふぶき"  width="354" height="265" hspace="5" vspace="5">
+                      <img src="img/super_snow_storm.JPEG" alt="猛吹雪" width="354" height="265" hspace="5" vspace="5">
+                      
                     </div>
                   </div>
                 </section>
