--- a/sub.html
+++ b/sub.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
     <title>sub_PORTFOLIO</title>
     <link href="portfolio/css/style.css" media="all" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="portfolio/img/favicon.ico" />
+    <link rel="shortcut icon" href="portfolio/img/koinobori.png" />
   </head>
 
   <body>
@@ -22,7 +22,8 @@
               <li class="header-nav-item"><a href="#SukimaSwitch">スキマスイッチ</a></li>
               <li class="header-nav-item"><a href="#album">スキマスイッチのおすすめアルバム</a></li>
               <li class="header-nav-item"><a href="#live-album">スキマスイッチ ライブアルバム一覧</a></li>
-              <li class="header-nav-item"><a href="unnotfound.html">more</a></li>
+              <li class="header-nav-item"><a href="portfolio/unnotfound.html">more</a></li>
+              <li class="header-nav-item"><a href="#Special Photo">Special Photo</a></li>
               <li class="header-nav-item"><a href="#Wikipedia">Wikipedia</a></li>
               <li class="header-nav-item"><a href="https://ja.wikipedia.org/wiki/メインページ">Wikipediaメインページ</a></li>
             </ul>
@@ -264,11 +265,29 @@
     </table>
   </section>
         <!-- /works -->
+        <!-- special photo -->
+        <section class="photo section" id="Special Photo">
+          <div class="inner">
+          <h2 class="title">Special Photo</h2>
+          <img src="portfolio/img/kushiro_city.JPEG" alt="霧の街釧路市" width="354" height="265" hspace="5" vspace="5">
+          <img src="portfolio/img/wingbay-otaru_otaru-chikko.JPEG" alt="ウイングベイ小樽から小樽築港駅までの間" width="354" height="265" hspace="5" vspace="5">
+          <img src="portfolio/img/aeonmall_asahikawa_sta.JPEG" alt="イオンモール旭川駅前" width="354" height="265" hspace="5" vspace="5">
+          <img src="portfolio/img/limited_express_lilac.JPEG" alt="運休になった特急ライラック" width="354" height="265" hspace="5" vspace="5">
+          <img src="portfolio/img/limited_express_taisetu.JPEG" alt="旭川駅を出る特急大雪" width="354" height="265" hspace="5" vspace="5">
+          <img src="portfolio/img/wingbay-otaru_1-2.JPEG" alt="ウイングベイ小樽４階１番街と２番街の間" width="354" height="265" hspace="5" vspace="5">
 
+        </div>
+        </section>
         <!-- Wikipedia -->
         <section class="wiki-section" id="Wikipedia">
           <div class="inner">
+            <div class="wiki-body">
+            <div class="logo-container">
+            <img src="portfolio/img/Wikipedia-logo-v2.svg.png" alt="Wikipediaのロゴ" width="80" height="80">   <!--個人利用であれば使用可能-->
+            <img src="portfolio/img/Wikimedia-logo.svg.png" alt="Wikimedia財団のロゴ" width="80" height="80">   <!--個人利用であれば使用可能-->
             <h2 class="title">Wikipedia</h2>
+          </div>
+          </div>
             <table>
               <tr>
                 <th>所属団体</th>
@@ -294,6 +313,9 @@
 
         <div class="page-top">
           <span class="material-icons-outlined"><a class="page-top-color" href="#">Page Top</a></span>
+        </div>
+        <div class="page-top">
+          <span class="material-icons-outlined"><a class="page-top-color" href="index.html">Portfolioに戻る</a></span>
         </div>
       </main>
       <!-- footer -->
